--- a/aplicativoEcommerce/Ecommerce/app/components/navBar.css
+++ b/aplicativoEcommerce/Ecommerce/app/components/navBar.css
@@ -47,6 +47,10 @@
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
+.nav-input::placeholder {
+    color: #999;
+}
+
 .login {
     text-decoration: none;
     color: #555555;
@@ -57,3 +61,4 @@
     font-size: 3vh;
     color: #535353;
 }
+
