--- a/aplicativoEcommerce/EcommerceREACT/src/PagesADM/CarrinhoADM/carrinhoADM.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/PagesADM/CarrinhoADM/carrinhoADM.css
@@ -1,10 +1,10 @@
 .tabela-container {
   width: 90%;
-  margin: 30px auto;
-  padding: 15px;
+  margin: 3vh auto;
+  padding: 2vh;
   background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 0.8vh;
+  box-shadow: 0vh 0.2vh 0.8vh rgba(0, 0, 0, 0.1);
   font-family: "Roboto", sans-serif;
 }
 
@@ -12,15 +12,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 2vh;
 }
 
 .btn-novo {
-  padding: 8px 16px;
+  padding: 1.2vh 2.5vh;
   background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 1vh;
   cursor: pointer;
 }
 
@@ -31,8 +31,8 @@
 
 .tabela-pedidos th,
 .tabela-pedidos td {
-  padding: 12px 15px;
-  border: 1px solid #ddd;
+  padding: 1.5vh 1.8vh;
+  border: 0.21vh solid #ddd;
   text-align: center;
 }
 
@@ -44,9 +44,9 @@
   background-color: #ffc107;
   color: #000;
   border: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  border-radius: 4px;
+  padding: 0.7vh 1.3vh;
+  margin-right: 0.5vh;
+  border-radius: 0.4vh;
   cursor: pointer;
 }
 
@@ -54,9 +54,9 @@
   background-color: #dc3545;
   color: white;
   border: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  border-radius: 4px;
+  padding: 0.7vh 1.3vh;
+  margin-right: 0.5vh;
+  border-radius: 0.4vh;
   cursor: pointer;
 }
 
@@ -64,7 +64,7 @@
   background-color: #17a2b8;
   color: white;
   border: none;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.7vh 1.3vh;
+  border-radius: 0.4vh;
   cursor: pointer;
 }
