--- a/aplicativoEcommerce/EcommerceREACT/src/components/Login/login.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/components/Login/login.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #f2f2f2; /* fundo suave */
+    background: #f2f2f2;
+    /* fundo suave */
     font-family: Arial, sans-serif;
 }
 
@@ -13,7 +14,7 @@
     background: #fff;
     padding: 5vh 4vh;
     border-radius: 1.5vh;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     width: 35vh;
     text-align: center;
     margin-bottom: 15vh;
@@ -64,4 +65,20 @@
 
 .registre-se {
     background-color: white;
+}
+
+.a {
+    color: #4a90e2;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.8vh;
+}
+
+.a:hover {
+  text-decoration: underline;
+  color: rgb(28, 112, 196);
+}
+
+label {
+    margin-left: 0.5vh;
 }
