--- a/aplicativoEcommerce/EcommerceREACT/src/components/Login/login.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/components/Login/login.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #f2f2f2;
+    background: #ffffff;
     /* fundo suave */
     font-family: Arial, sans-serif;
 }
@@ -31,7 +31,7 @@
 
 /* Inputs */
 .login-box input {
-    width: 90%;
+    width: 100%;
     padding: 10px 12px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -80,5 +80,9 @@
 }
 
 label {
-    margin-left: 0.5vh;
+    margin-left: 1vh;
+}
+
+.p-login {
+    font-size: 2vh;
 }
