layout de produto por id completo

--- a/aplicativoEcommerce/EcommerceREACT/src/components/navBar/navBar.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/components/navBar/navBar.css
@@ -90,6 +90,10 @@
     margin-right: 7vh;
 }
 
+.fa-cart-shopping:hover {
+    color: #3a3239;
+}
+
 .iconLupa {
   position: absolute;
   left: 3vh;
