--- a/aplicativoEcommerce/EcommerceREACT/src/components/navBar/navBar.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/components/navBar/navBar.css
@@ -15,13 +15,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 3vh;
-    margin-left: 5vh;
+    margin-left: 2vh;
 }
 
-.logoAncora {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
+.img-logo {
+    margin-top: 3vh;
+    width: 20vh;
+    height: 17vh;
 }
 
 .nav-opcoes {
@@ -30,6 +30,7 @@
     gap: 7vh;
     margin-right: 7vh;
     align-items: center;
+    font-weight: 00;
 }
 
 .nav-input {
@@ -80,6 +81,7 @@
     align-items: center;
     justify-content: center;
     gap: 1vh;
+    font-weight: 400;
 }
 
 .fa-solid {
