--- a/aplicativoEcommerce/EcommerceREACT/src/components/Carrinho/carrinho.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/components/Carrinho/carrinho.css
@@ -89,6 +89,7 @@
     font-size: 3vh;
     font-weight: 500;
     margin-top: 0;
+    margin-left: 5px;
 }
 
 .subtotal-div,
@@ -137,4 +138,5 @@
     border-radius: 1vh;
     font-family: "Roboto", sans-serif;
     font-size: 2.6vh;
+    margin-left: 10px;
 }
