--- a/aplicativoEcommerce/EcommerceREACT/src/components/navBar/navBar.css
+++ b/aplicativoEcommerce/EcommerceREACT/src/components/navBar/navBar.css
@@ -130,3 +130,11 @@
     border: 1px solid #363636;
     color: white;
 }
+
+.icone-carrinho {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: inherit;
+    font-size: inherit;
+}
